--- a/style.css
+++ b/style.css
@@ -1,12 +1,15 @@
 * {
     margin: 0;
     padding: 0;
+}
+*,
+*:before,
+*:after {
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     -o-box-sizing: border-box;
     box-sizing: border-box;
 }
-
 body {
     background-image: url(./assets/images/bg.jpg);
 }
@@ -14,69 +17,15 @@ body {
     height: 350px;
     margin: 100px auto 0;
     position: relative;
-    width: 700px;
-}
-
-.slider {
-    background-color: #ddd;
-    height: inherit;
-    overflow: hidden;
-    position: relative;
-    width: inherit;
-    -webkit-box-shadow: 0 0 20px rgba(0, 0, 0, .5);
-    -moz-box-shadow: 0 0 20px rgba(0, 0, 0, .5);
-    -o-box-shadow: 0 0 20px rgba(0, 0, 0, .5);
-    box-shadow: 0 0 20px rgba(0, 0, 0, .5);
+    width: 600px;
 }
 .wrapper > input {
     display: none;
 }
-.slides {
-    height: inherit;
-    position: absolute;
-    width: inherit;
-    background-repeat: no-repeat;
-
-}
-
-.slide1 { background-image: url(./assets/images/1.jpg); }
-.slide2 { background-image: url(./assets/images/2.jpg); }
-.slide3 { background-image: url(./assets/images/3.jpg); }
-.slide4 { background-image: url(./assets/images/4.jpg); }
-.slide5 { background-image: url(./assets/images/5.jpg); }
-
 .wrapper .controls {
     left: 50%;
-    margin-left: -98px;
+    margin-left: 90px;
     position: absolute;
-}
-
-.wrapper label {
-    cursor: pointer;
-    display: inline-block;
-    height: 8px;
-    margin: 25px 12px 0 16px;
-    position: relative;
-    width: 8px;
-    -webkit-border-radius: 50%;
-    -moz-border-radius: 50%;
-    -o-border-radius: 50%;
-    border-radius: 50%;
-}
-
-.wrapper label:after {
-    border: 2px solid #ddd;
-    content: " ";
-    display: block;
-    height: 12px;
-    left: -4px;
-    position: absolute;
-    top: -4px;
-    width: 12px;
-    -webkit-border-radius: 50%;
-    -moz-border-radius: 50%;
-    -o-border-radius: 50%;
-    border-radius: 50%;
 }
 .wrapper label {
     cursor: pointer;
@@ -94,23 +43,31 @@ body {
     -o-transition: background ease-in-out .5s;
     transition: background ease-in-out .5s;
 }
-p {
-    color: #fff;
+.wrapper label:after {
+    border: 2px solid #ddd;
+    content: " ";
+    display: block;
+    height: 12px;
+    left: -2px;
+    position: absolute;
+    top: -2px;
+    width: 12px;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    -o-border-radius: 50%;
+    border-radius: 50%;
 }
-
-.wrapper label:hover,
-#slide1:checked ~ .controls label:nth-of-type(1),
-#slide2:checked ~ .controls label:nth-of-type(2),
-#slide3:checked ~ .controls label:nth-of-type(3),
-#slide4:checked ~ .controls label:nth-of-type(4),
-#slide5:checked ~ .controls label:nth-of-type(5) {
-    background: #ddd;
+.slider {
+    height: inherit;
+    overflow: hidden;
+    position: relative;
+    width: inherit;
 }
 .slides {
-    height: inherit;
+    height: 350px;
     opacity: 0;
     position: absolute;
-    width: inherit;
+    width: 600px;
     z-index: 0;
     -webkit-transform: scale(1.5);
     -moz-transform: scale(1.5);
@@ -120,8 +77,44 @@ p {
     -moz-transition: transform ease-in-out .5s, opacity ease-in-out .5s;
     -o-transition: transform ease-in-out .5s, opacity ease-in-out .5s;
     transition: transform ease-in-out .5s, opacity ease-in-out .5s;
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: center;
 }
 
+.slide1 { background-image: url(./assets/images/1.jpg); }
+.slide2 { background-image: url(./assets/images/2.jpg); }
+.slide3 { background-image: url(./assets/images/3.jpg); }
+.slide4 { background-image: url(./assets/images/4.jpg); }
+.slide5 { background-image: url(./assets/images/5.jpg); }
+.wrapper label:hover,
+#slide1:checked ~ .controls label:nth-of-type(1),
+#slide2:checked ~ .controls label:nth-of-type(2),
+#slide3:checked ~ .controls label:nth-of-type(3),
+#slide4:checked ~ .controls label:nth-of-type(4),
+#slide5:checked ~ .controls label:nth-of-type(5) {
+    background-color: #911111;
+}
+#slide1:checked ~ .controls label:nth-of-type(1) .text1 {
+    display: block;
+    left: -340px
+}
+#slide2:checked ~ .controls label:nth-of-type(2) .text2 {
+    display: block;
+    left: -380px
+}
+#slide3:checked ~ .controls label:nth-of-type(3) .text3 {
+    display: block;
+    left: -420px
+}
+#slide4:checked ~ .controls label:nth-of-type(4) .text4 {
+    display: block;
+    left: -460px
+}
+#slide5:checked ~ .controls label:nth-of-type(5) .text5 {
+    display: block;
+    left: -500px
+}
 #slide1:checked ~ .slider > .slide1,
 #slide2:checked ~ .slider > .slide2,
 #slide3:checked ~ .slider > .slide3,
@@ -133,4 +126,117 @@ p {
     -moz-transform: scale(1);
     -o-transform: scale(1);
     transform: scale(1);
+}
+p {
+    color: #fff;
+    position: absolute;
+    width: 300px;
+    top: -3px;
+    left: -400px;
+}
+.text1,
+.text2,
+.text3,
+.text4,
+.text5 {
+    display: none;
+}
+.text {
+    -webkit-transform: scale(1.2);
+    -moz-transform: scale(1.2);
+    -o-transform: scale(1.2);
+    transform: scale(1.2);
+    -webkit-transition: transform ease-in-out .5s, opacity ease-in-out .5s;
+    -moz-transition: transform ease-in-out .5s, opacity ease-in-out .5s;
+    -o-transition: transform ease-in-out .5s, opacity ease-in-out .5s;
+    transition: transform ease-in-out .5s, opacity ease-in-out .5s;
+}
+@media (max-width: 540px) {
+    p {
+        top: 50px;
+    }
+    .wrapper .controls {
+        margin-left: -105px;
+    }
+    #slide1:checked ~ .controls label:nth-of-type(1) .text1 {
+        left: -125px
+    }
+    #slide2:checked ~ .controls label:nth-of-type(2) .text2 {
+        left: -165px
+    }
+    #slide3:checked ~ .controls label:nth-of-type(3) .text3 {
+        left: -205px
+    }
+    #slide4:checked ~ .controls label:nth-of-type(4) .text4 {
+        left: -245px
+    }
+    #slide5:checked ~ .controls label:nth-of-type(5) .text5 {
+        left: -285px
+    }
+    .slides {
+        height: 330px;
+    }
+    .wrapper {
+        margin: 100px -35px 0;
+    }
+}
+@media (max-width: 440px) {
+    p {
+        top: 50px;
+    }
+    .wrapper .controls {
+        margin-left: -105px;
+    }
+    #slide1:checked ~ .controls label:nth-of-type(1) .text1 {
+        left: -75px
+    }
+    #slide2:checked ~ .controls label:nth-of-type(2) .text2 {
+        left: -115px
+    }
+    #slide3:checked ~ .controls label:nth-of-type(3) .text3 {
+        left: -155px
+    }
+    #slide4:checked ~ .controls label:nth-of-type(4) .text4 {
+        left: -195px
+    }
+    #slide5:checked ~ .controls label:nth-of-type(5) .text5 {
+        left: -235px
+    }
+    .slides {
+        height: 250px;
+    }
+    .wrapper {
+        margin: 100px -65px 0;
+        height: 265px;
+    }
+}
+@media (max-width: 360px) {
+    p {
+        top: 50px;
+    }
+    .wrapper .controls {
+        margin-left: -105px;
+    }
+    #slide1:checked ~ .controls label:nth-of-type(1) .text1 {
+        left: -75px
+    }
+    #slide2:checked ~ .controls label:nth-of-type(2) .text2 {
+        left: -115px
+    }
+    #slide3:checked ~ .controls label:nth-of-type(3) .text3 {
+        left: -155px
+    }
+    #slide4:checked ~ .controls label:nth-of-type(4) .text4 {
+        left: -195px
+    }
+    #slide5:checked ~ .controls label:nth-of-type(5) .text5 {
+        left: -235px
+    }
+    .slides {
+        height: 250px;
+    }
+    .wrapper {
+        margin: 100px -100px 0;
+        height: 265px;
+    }
 }
